# interestellar-ai-explorer

./: .gitignore  Cargo.toml  Dockerfile  README.md  diesel.toml  techstack-and-plan.md  trouble-shooting.md
migrations/2024-11-17-142430_create_species/: up.sql
src/: db.rs  evolution.py  main.rs  models.rs  schema.rs  simulation.rs
src/web/: web.rs
