[package]
name = "interstellar-ai-explorer"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
diesel ={ version = "2.2.4", features = ["postgres"] }
dotenv = "0.15.0"
rand = "0.8.5"
tokio = "1.41.1"
pyo3-ffi = "0.23.1"  # Add this line

[dependencies.pyo3]
version = "0.23.1"
features = ["auto-initialize"]
